# flutter_nano_ffi

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  libed25519_blake2b.so.1  libed25519_blake2b.so.1.0.0  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/flutter_nano_ffi/: FlutterNanoFfiPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_nano_ffi_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: flutter_nano_ffi.podspec
ios/Classes/: FlutterNanoFfiPlugin.h  FlutterNanoFfiPlugin.m  SwiftFlutterNanoFfiPlugin.swift
ios/Classes/ed25519_blake2b/: ed25519_blake2b.c  ed25519_blake2b.h
ios/Classes/ed25519_blake2b/ed25519-donna/: curve25519-donna-scalarmult-base.h  ed25519-donna-32bit-tables.h
lib/: flutter_nano_ffi.dart
lib/src/: util.dart
lib/src/account/: account_coder.dart  account_type.dart  account_util.dart
lib/src/blocks/: state_block.dart
lib/src/crypto/: blake2b.dart
lib/src/encrypt/: crypter.dart
lib/src/encrypt/kdf/: kdf.dart  pbkdf2_kdf.dart  sha256_kdf.dart
lib/src/ffi/: ed25519_blake2b.dart
lib/src/keys/: keys.dart  mnemonics.dart  seeds.dart
lib/src/signing/: signer.dart
test/: flutter_nano_ffi_test.dart
